Fix another overflow attack/fix quiz and map layout / add background

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,27 +7,29 @@
     box-sizing: border-box;
     line-height: 1.5;
     text-align: center;
-
 }
 
 body {
-    background-color: aqua;
+    background-image: url("../images/cover-logo2.png");
+    background-repeat: repeat;
+    background-size: 6%;
+    background-position: center;
     display: flex;
     flex-direction: column;
     font-family: "Libre Caslon Text", serif;
     color: black;
     height: 100vh;
-    max-width: 100vw;
     width: 100%;
 }
 
 /* Header Styling */
 header {
-    background-color: #333;
+    background-color: #1f1717;
     border-bottom: 2px solid #3a3a3a;
     padding: 1rem 0;
     color: white;
     text-align: center;
+    width: 100%;
 }
 
 /* Main Content area styling */
@@ -50,6 +52,18 @@ section {
 #map-section {
     background-color: aquamarine;
     max-width: 800px;
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0.8);
+    box-shadow: 0 0 10px 2px;
+    border-radius: 6px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 12px 0;
+}
+
+#map-section p {
+    padding-bottom: 15px;
 }
 
 #map-container {
@@ -57,22 +71,29 @@ section {
     max-width: 800px;
     /* adding position relative - for the floating point to respond better to responsivity */
     position: relative;
+    background-color: rgba(255, 255, 255, 0.7);
+    box-shadow: 0 0 10px 2px;
+    border-radius: 6px;
+    width: 96%;
 }
 
 #map-container h3 {
-    padding: 15px 0;
+    padding: 9px 0;
 }
 
 #map-image {
-    max-width: 100%;
+    width: 98%;
     border: 2px solid #3a3a3a;
     border-radius: 10px;
 }
 
 #map-description {
     margin-top: 10px;
-    padding: 10px 0;
-    background-color: bisque;
+    padding: 10px 6px;
+    background-color: white;
+    box-shadow: 0 0 10px 2px;
+    border-radius: 6px;
+    max-width: 93%;
 }
 
 /* The Floating Dot */
@@ -119,10 +140,15 @@ section {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    width: 100%;
     /* figure out the question section size */
-    /* max-width: 800px;
-    height: 700px;
-    margin-bottom: 60px; */
+    max-width: 350px;
+    height: 200px;
+    padding-bottom: 15px;
+    margin-bottom: 60px;
+    background-color: rgba(255, 255, 255, 0.7);
+    box-shadow: 0 0 10px 2px;
+    border-radius: 6px;
 }
 
 #quiz-section p {
@@ -165,10 +191,10 @@ section {
 #quiz-container {
     width: 600px;
     max-width: 60%;
-    /* background-color: white;
+    background-color: rgba(255, 255, 255, 0.8);
     border-radius: 6px;
     padding: 10px;
-    box-shadow: 0 0 10px 2px; */
+    box-shadow: 0 0 10px 2px;
 }
 
 .answer-btn-grid {
@@ -188,18 +214,23 @@ section {
     font-weight: bold;
     font-size: 1.2rem;
     cursor: pointer;
+    box-shadow: 0 0 10px 2px;
+    transition: background-color 0.3s;
 }
 
 .btn:hover {
     border-color: green;
+    background-color: #e0e0e0;
 }
 
 .btn.correct {
-    background-color: green;
+    background-color: lightgreen;
+    border-color: rgb(58, 95, 58);
 }
 
 .btn.wrong {
-    background-color: red;
+    background-color: lightcoral;
+    border-color: rgb(168, 87, 87);
 }
 
 .start-btn,
@@ -207,6 +238,7 @@ section {
     font-size: 1.5rem;
     font-weight: bold;
     padding: 10px 20px;
+    background-color: #e0e0e0;
 }
 
 .controls {
@@ -228,7 +260,7 @@ section {
 footer #social {
     list-style-type: none;
     padding: 20px 0;
-    background-color: #333;
+    background-color: #1f1717;
     border-top: 2px solid #3a3a3a;
     display: flex;
     justify-content: space-evenly;
@@ -243,5 +275,9 @@ footer #social {
 /* Social Icons Styling */
 #social i {
     font-size: 1.5rem;
+    color: #fff;
+}
+
+footer>p {
     color: #fff;
 }
